# Savitzky-Golay-Filter

./: .gitignore  CMakeLists.txt  LICENSE  README.md  SyncFork.sh
include/: mes_savgol.h  mqs_def.h
include/iterative/: savgol2d.h  savgolFilter.h  savgol_stream.h
src/: CMakeLists.txt  mes_savgol.c  savgol2d.c  savgol_export.c
src/fixed-point-arithmetic/: savgolFilterFP.c
src/iterative/: CMakeLists.txt  savgolFilter.c  savgol_filter_vectorized.c  savgol_kernels.h  savgol_reverse_kernels.h  savgol_simd_ops.h  savgol_soa_convert.h  savgol_stream.c
src/parallel/: CMakeLists.txt  savgolFilterMT.c
src/recursive/: mes_savgol.c
test/: main.c
test/iterative/: CMakeLists.txt  main.cpp  test_benchmark.cpp  test_cache.cpp  test_convolution.cpp  test_filterApplication.cpp  test_genfact.cpp  test_grampoly.cpp  test_savgol.c  test_savgol2d.c  test_savgolFilter.cpp  test_savgol_main.c  test_savgol_stream.c  test_weights.cpp
tool for matlab comparisons/: savgolComparison.asv  savgolComparison.m
